# S1-GRiTS-V100

./: .gitignore  LICENSE  README.md  WHEEL_BUILD_ISSUE_ANALYSIS.md  environment.yml  pyproject.toml  setup.py
config/: s1grits_config_base_en.yaml
gui/: __init__.py  app.py  config_builder.py  runner.py  styles.py  utils.py
gui/pages/: __init__.py  page_catalog.py  page_mapping.py  page_mosaic.py  page_process.py  page_tile.py
notebooks/: Tutorial_A01_asf_search_basics.ipynb  Tutorial_A03_shapefile_wkt_query_en.ipynb  Tutorial_B01_S1-GRiTS_mosaicVisual_Fig3.ipynb  Tutorial_B01_S1-GRiTS_mosaicVisual_byYear(Henan).ipynb  Tutorial_B02_S1-GRiTS_mosaicVisual_Fig4(Beyern).ipynb  Tutorial_B02_S1-GRiTS_mosaicVisual_Fig4(GBA).ipynb  Tutorial_B02_S1-GRiTS_mosaicVisual_Fig4(PortHedland).ipynb  Tutorial_B02_S1-GRiTS_timeseries_Fig5.ipynb  Tutorial_B03_S1-GRiTS_timeseries_Fig5.ipynb
output_hARDCp/: collection.json
output_hARDCp/50RKV_ASCENDING/: 50RKV_ASCENDING_2026-02.json
src/s1grits/: __init__.py  __main__.py  __version__.py  adapters.py  asf_array_processing.cp312-win_amd64.pyd  asf_io.cp312-win_amd64.pyd  asf_io.py  asf_output_writing.cp312-win_amd64.pyd  asf_tiles.cp312-win_amd64.pyd  asf_tiles.py  asf_viewer.py  cli.py  cli_legacy.py  dist_enum.py  dist_enum_inputs.py  gui_entry.py  logger_config.py  memory_manager.py  mgrs_burst_data.cp312-win_amd64.pyd  notebook_utils.py  rtc_s1_io.cp312-win_amd64.pyd  rtc_s1_io.py  stac_builder.py  tabular_models.py  time_utils.py  workflow.py  zarr_time_fix.py
src/s1grits/analysis/: README.md  __init__.py  catalog.py  display_mosaic.py  io.py  mosaic.py  plotting.py  reporting.py  timeseries.py  validation.py
src/s1grits/data/: mgrs.parquet  mgrs_burst_lookup_table.parquet
